--- a/templates/index.html
+++ b/templates/index.html
@@ -1611,7 +1611,7 @@
         // Dashboard'a yönlendirme
         function redirectToDashboard() {
             // dashboard.html dosyasının varlığını kontrol et
-            window.location.href = 'dashboard.html';
+            window.location.href = 'index.html';
         }
         
         // Payment sayfasını göster
