--- a/templates/index.html
+++ b/templates/index.html
@@ -1157,7 +1157,7 @@
             localStorage.setItem('current_user', JSON.stringify(currentUser));
             
             // Yönlendirme
-            window.location.href = 'dashboard.html';
+            window.location.href = 'dashboard';
         }
         
         // Kullanıcıyı local storage'a kaydet
